# opencc-fmmseg

./: .gitignore  CHANGELOG.md  CUSTOM_DICT_USER_GUIDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: build_capi_artifacts.yml  release.yml  rust.yml
benches/: ChangFeng_Simp.txt  ChangFeng_Trad.txt  opencc_fmmseg_bench.rs
capi/: OpenccFmmsegHelper.hpp  opencc_fmmseg_capi.h
capi/demo/: build..txt  opencc_fmmseg_capi.h  use_opencc_fmmseg_c.c  use_opencc_fmmseg_cpp.cpp
capi/demo-linux-amd64/: build..txt  opencc_fmmseg_capi.h  use_opencc_fmmseg_c  use_opencc_fmmseg_c.c  use_opencc_fmmseg_cpp  use_opencc_fmmseg_cpp.cpp
capi/demo-macos-x86_64/: build..txt  libopencc_fmmseg_capi.dylib  use_opencc_fmmseg_c  use_opencc_fmmseg_c.c  use_opencc_fmmseg_cpp  use_opencc_fmmseg_cpp.cpp
capi/demo-win-x86_64/: OpenccFmmsegHelper.hpp  build..txt  opencc_fmmseg_capi.dll.lib  opencc_fmmseg_capi.h  opencc_fmmseg_capi.hpp  use_opencc_fmmseg_c.c  use_opencc_fmmseg_cpp.cpp  use_opencc_fmmseg_len_c.c  use_opencc_fmmseg_len_cpp.cpp
capi/demo-win7-x86_32/: build..txt  opencc_fmmseg_capi.dll.lib  opencc_fmmseg_capi.dll.win10  opencc_fmmseg_capi.h  use_opencc_fmmseg_c.c
capi/demo-win7-x86_64/: OpenccFmmsegHelper.hpp  UseOpenccFmmsegHelper.cpp  opencc_fmmseg_capi.dll.lib  use_opencc_fmmseg_c.c
capi/demo/linux-x64/: OpenccFmmsegHelper.hpp  opencc_fmmseg_capi.h  use_opencc_fmmseg_cpp  use_opencc_fmmseg_cpp.cpp
capi/demo/macos-x64/: libopencc_fmmseg_capi.dylib  opencc_fmmseg_capi.h  use_opencc_fmmseg_c  use_opencc_fmmseg_c.c  use_opencc_fmmseg_cpp.cpp
capi/demo/win-x64/: OpenccFmmsegHelper.hpp  UseOpenccFmmsegHelper.cpp  opencc_fmmseg_capi.dll.lib  opencc_fmmseg_capi.h  use_opencc_fmmseg_c.c  use_opencc_fmmseg_cpp.cpp  use_opencc_fmmseg_len_c.c  use_opencc_fmmseg_len_cpp.cpp
capi/demo/win7-x64/: OpenccFmmsegHelper.hpp  opencc_fmmseg_capi.dll.lib  opencc_fmmseg_capi.h
capi/demo/win7-x86/: OpenccFmmsegHelper.hpp  build..txt  opencc_fmmseg_capi.dll.lib  use_opencc_fmmseg_c.c  use_opencc_fmmseg_cpp.cpp
capi/include/: OpenccFmmsegHelper.hpp  opencc_fmmseg_capi.h
capi/opencc-fmmseg-capi/: Cargo.toml  README.md  build.rs
capi/opencc-fmmseg-capi/dicts/: STPhrases.txt  TWPhrases.txt
capi/opencc-fmmseg-capi/src/: lib.rs
capi/opencc-fmmseg-capi/src/dicts/: STPhrases.txt  TSPhrases.txt  dictionary_maxlength.json
dicts/: STPhrases.txt  TWPhrases.txt  TWPhrasesRev.txt
examples/: use_opencc_fmmseg_test.rs
python/: MANIFEST.in  README.md  pyproject.toml  use_opencc_fmmseg.py  use_opencc_rs.py
python/opencc_fmmseg/: __init__.py  __main__.py  _native.py  office_helper.py  opencc_fmmseg.py
python/opencc_rs/: __init__.py  __main__.py  libopencc_fmmseg_capi.dylib  opencc_fmmseg_capi.dll.lib  opencc_rs.py
src/: compat_ideographs.rs  delimiter_set.rs  detofu.rs  dict_refs.rs  dictionary_lib.rs  lib.rs  lib.rs.bak  opencc.rs  opencc_config.rs  utils.rs  zho_dictionary.rs  zho_dictionary_muti_threads.bak
src/data/: TSCharactersTofu.txt
src/dictionary_lib/: dict_max_len.rs  dict_slot.rs  dictionary_maxlength.rs  mod.rs  starter_union.rs
src/dictionary_lib/dictionary_maxlength/: union_cache.rs
src/dictionary_lib/dicts/: dictionary_maxlength.cbor  dictionary_maxlength.json  dictionary_maxlength.zstd
src/dicts/: STPhrases.txt  dictionary_maxlength.json
tests/: test_dictionary_maxlength.rs  test_dictionary_maxlength_basic.rs  test_dictionay_maxlength_roundtrip.rs  test_opencc_basic.rs  test_opencc_fmmseg.rs  test_opencc_ids.rs
tests/data/: custom_tofu.txt  my_hk_dict.txt
tests/dicts/: dictionary_maxlength.zstd
tools/dict-generate/: Cargo.toml  build.rs
tools/dict-generate/src/: json_io.rs  main.rs
tools/opencc-clip/: Cargo.toml  README.md
tools/opencc-clip/src/: main.rs
tools/opencc-rs/: Cargo.toml  README.md  build.rs
tools/opencc-rs/src/: main.rs  main.rs.bak  main.rs.bak2
tools/opencc-rs/src/office_converter/: converter.rs
tools/opencc-rs/src/office_doc_converter/: converter.rs  mod.rs
tools/opencc-tool-common/: Cargo.toml
tools/opencc-tool-common/src/: lib.rs
