workspace = { members = [ "capi/opencc-fmmseg-capi", "tools/dict-generate","tools/opencc-clip", "tools/opencc-rs"] }

[package]
name = "opencc-fmmseg"
version = "0.7.0"
edition = "2021"
authors = ["Laisuk Lai <laisuk@example.com>"]
description = "High-performance OpenCC-based Chinese conversion using FMM (Forward Maximum Matching) segmentation."
license = "MIT"
repository = "https://github.com/laisuk/opencc-fmmseg"
homepage = "https://github.com/laisuk/opencc-fmmseg"
documentation = "https://docs.rs/opencc-fmmseg"
readme = "README.md"
keywords = ["opencc", "chinese", "segmentation", "fmm", "conversion"]
categories = ["text-processing", "localization", "command-line-utilities", "parser-implementations"]
exclude = [
    "/.github",
    "/tools/",
    "/capi/",
    "/target/",
    "/benches/",
    "/examples/",
    "/tests/",
    "/python/",
    "*.md",
    "*.yml",
    "*.bak",
    "*.bka",
    "*.orig"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.11.1"
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
serde_cbor = "0.11.2"
rayon = "1.10.0"
zstd = "0.13.3"
rustc-hash = "2.1.1"
once_cell = "1.21.3"

[dev-dependencies]
criterion = "0.6.0"

[[bench]]
name = "opencc_fmmseg_bench"
harness = false

[profile.release]
opt-level = 3            # Maximize speed (better suited for C API performance)
codegen-units = 1          # Optimize across the entire codebase for better performance
lto = "fat"                # Full Link Time Optimization for improved binary performance
panic = "abort"            # Prevents Rust panics from unwinding, reducing binary size
incremental = false        # Disable incremental builds to fully optimize the release binary
strip = "symbols"          # Strips debug symbols while retaining export symbols needed for the C API
debug = 0                  # No debug info in the final binary to reduce size
#crt-static = false
