[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "opencc-fmmseg"
version = "0.10.3"
description = "Python ctypes wrapper for OpenCC-FMMSEG (Rust-based high-performance Chinese text conversion)"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"

authors = [
    { name = "laisuk", email = "laisuk@yahoo.com" }
]

keywords = [
    "opencc",
    "chinese",
    "simplified",
    "traditional",
    "conversion",
    "fmmseg",
    "rust"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Text Processing :: Linguistic"
]

dependencies = []

[project.urls]
Homepage = "https://github.com/laisuk/opencc-fmmseg"
Repository = "https://github.com/laisuk/opencc-fmmseg"

[tool.setuptools]
packages = ["opencc_fmmseg", "opencc_fmmseg.native"]

[tool.setuptools.package-data]
opencc_fmmseg = [
    "native/*/*.dll",
    "native/*/*.so",
    "native/*/*.dylib"
]