[package]
name = "opencc-fmmseg-capi"
version = "0.8.4"
edition = "2021"
#rust-version = "1.75"

[package.metadata.capi]
revision = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# cargo build --release --target=x86_64-pc-windows-msvc

[dependencies]
opencc-fmmseg = { path = "../.." }

[lib]
crate-type = ["cdylib"]

[build-dependencies]
winres = "0.1.12"
cargo_metadata = "0.23.1"