[package]
name = "opencc-fmmseg-capi"
version = "0.11.2"
edition = "2021"

[package.metadata.capi]
revision = 0

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# cargo build --release --target=x86_64-pc-windows-msvc

[dependencies]
opencc-fmmseg = { path = "../.." }

[lib]
crate-type = ["cdylib"]

[build-dependencies]
winres = "0.1"
toml = "=0.8"
