[package]
name = "dict-generate"
version = "0.8.3"
edition = "2021"
#rust-version = "1.75"

[dependencies]
opencc-fmmseg = { path = "../.." }
clap = "4.5.53"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_cbor = "0.11.2"
rustc-hash = "2.1.1"

[build-dependencies]
winres = "0.1.12"