[package]
name = "opencc-clip"
version = "0.10.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opencc-fmmseg = { path = "../.." }
copypasta = "0.10"
clap = "=4.5"

# Exact dependency pins to preserve MSRV (rustc 1.75.0):
# clap_lex@1.0.1
clap_lex = "=1.0"
